feat: add path aliases

--- a/internal/web/src/styles/index.css
+++ b/internal/web/src/styles/index.css
@@ -6,7 +6,7 @@
   font-style: normal;
   font-display: swap;
   font-weight: 400;
-  src: url("./assets/fonts/Koulen-Regular.ttf");
+  src: url("../assets/fonts/Koulen-Regular.ttf");
 }
 
 ::selection {
